log
ju., 21 de abr. de 2022 11:28:34: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:76:12: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if(lower_than (key,aux->pair->key)==1){
            ^~~~~~~~~~
treemap.c:78:18: error: implicit declaration of function 'lowe_than' [-Werror=implicit-function-declaration]
         }else if(lowe_than(aux->pair->key,key)==1){
                  ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
27a38ef
ju., 21 de abr. de 2022 11:28:51: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:76:12: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if(lower_than (key,aux->pair->key)==1){
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7dd821d
ju., 21 de abr. de 2022 11:30:08: 
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:76:12: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if(lower_than(key,aux->pair->key)==1){
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c2a528f
ju., 21 de abr. de 2022 11:32:03: 
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:76:12: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if(lower_than(key,aux->pair->key)==1){
            ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
dd68126
ju., 21 de abr. de 2022 11:35:12: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  8|7
total_score: 10/70
7d6f757
ju., 21 de abr. de 2022 11:43:59: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
072fa8c
ju., 21 de abr. de 2022 11:44:57: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
b6d070e
ju., 21 de abr. de 2022 11:54:57: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:50:14: error: unused variable 'aux' [-Werror=unused-variable]
     TreeNode*aux=tree->root;
              ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
c333a82
ju., 21 de abr. de 2022 11:55:13: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
039f70d
ju., 21 de abr. de 2022 11:56:32: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:51:15: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     tree->root=searchTreeMap(tree,key);
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
73ae5d1
ju., 21 de abr. de 2022 11:56:54: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:51:21: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     tree->root->left=searchTreeMap(tree,key);
                     ^
cc1.exe: all warnings being treated as errors
Compilation failed
3060f40
